--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,2 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+.main-visual {
+  background-image: url("../images/haikei.jpg");
+  height: 667px;
+  width: 1000px;
+  background-size:cover;
+}
