--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,7 +1,6 @@
 
-<%# ショッピングカートの一覧画面作成 %>
-<%# 課題事項：タイトルの背景色変更,
-　　買い物を続けるボタンのパス変更, パスの確認, %>
+<%= flash[:notice] %>
+<%= flash[:alert] %>
 <h6>ショッピングカート</h6>
 <%# ショッピングカートの右側の表示機能 %>
 <%= link_to 'カートを空にする', destroy_all_path, method: :delete, "data-confirm" => "本当に削除しますか？", class: "btn btn-danger" %>
@@ -44,5 +43,7 @@
 <%# ショッピングカート真ん中部分の表示機能 %>
 <%= link_to '買い物を続ける', root_path, class: "btn btn-primary" %>
 
-<%# ショッピングカート下部分の表示機能, public/ordersを作成してもらったあとにパス変更！%>
+<% if @cart_items.present? %>
 <%= link_to '情報入力に進む', new_order_path, class: "btn btn-success" %>
+<% end %>
+
