--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,7 +1,17 @@
-<h2>ジャンル編集</h2>
- <%= form_with model:@genre, url: admin_genre_path(@genre.id) do |f| %>
-  <%= f.label :name, "ジャンル名" %>
-  <%= f.text_field :name %>
-  <%= f.submit '変更を保存'%>
- 
-  <% end %>
+<div class="container">
+  <div class="row py-2">
+    <div class="col-10 offset-2">
+      <h4>ジャンル編集</h4>
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-8">
+     <%= form_with model:@genre, url: admin_genre_path(@genre.id) do |f| %>
+     <table>
+      <td class="col-2 font-weight-bold"><%= f.label :name, "ジャンル名" %></td>
+      <td class="col-2"><%= f.text_field :name %></td>
+      <td class="col-4"><%= f.submit '変更を保存', class: "btn btn-success"%></td>
+     </table>
+     <% end %>
+   </div>
+  </div>
