--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,23 +1,38 @@
-<h2>ジャンル一覧・追加</h2>
-
-<%= form_with model: @genre, url: admin_genres_path do |f| %>
- <%= f.label :name, "ジャンル名"  %>
- <%= f.text_field :name %>
- <%= f.submit '新規登録'%>
- <% end %>
-<table class='table table-hover'>
- <thead class='table-light'>
-   <tr>
-    <th>ジャンル</th>
-    <th></th>
-   </tr>
- </thead>
- <tbody>
-   <% @genres.each do |genre| %>
-    <tr>
-    <td><%= genre.name %></td>
-    <td><%= link_to '編集する', edit_admin_genre_path(genre.id) %></td>
-    </tr>
-    <% end %>
- </tbody>
-</table>
+<div class="container">
+  <div class="row py-2">
+    <div class="col-10 offset-2">
+      <h4>ジャンル一覧・追加</h4>
+    </div>
+  </div>
+  <div class="row py-4">
+    <div class="col-8">
+     <table>
+      <%= form_with model: @genre, url: admin_genres_path do |f| %>
+     <td class="col-2"><%= f.label :name, "ジャンル名"  %></td>
+     <td class="col-2"><%= f.text_field :name %></td>
+     <td class="col-4"><%= f.submit '新規登録', class: "btn btn-success"%></td>
+      <% end %>
+     </table>
+     </div>
+   </div>
+     
+   <div class="row">
+     <div class="col-6">
+      <table class='table'>
+       <thead>
+        <tr class="table-secondary">
+         <th>ジャンル</th>
+         <th></th>
+        </tr>
+       </thead>
+       <tbody>
+       <% @genres.each do |genre| %>
+        <tr class="border-bottom">
+         <td><%= genre.name %></td>
+         <td><%= link_to '編集する', edit_admin_genre_path(genre.id), class: "btn btn-success"%></td>
+        </tr>
+       <% end %>
+       </tbody>
+      </table>
+     </div>
+   </div>
