--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
           <%= link_to "マイページ", mypage_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "商品一覧", public_items_path, class: "nav-link" %>
+          <%= link_to "商品一覧", items_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "カート", cart_items_path,class: "nav-link" %>
