--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -92,7 +92,7 @@
       <%= link_to '編集する', edit_admin_customer_path, class: "btn btn-success" %>
 
      <%#注文履歴一覧のpathはせいちゃん作成後、再度設定。%>
-      <%= link_to '注文履歴一覧を見る', public_items_path, class: "btn btn-primary" %>
+      <%= link_to '注文履歴一覧を見る', items_path, class: "btn btn-primary" %>
 
 
 
