--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row py-2">
-    <div class="col-10 offset-2">
-      <h4>ジャンル編集</h4>
+    <div class="col-10">
+      <h2>ジャンル編集</h2>
     </div>
   </div>
    <div class="row">
