--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,7 +1,10 @@
-
-<h1>About</h1>
+<div class="text-center">
+  <h1>About</h1>
 <div>ながのCAKEは全国発送可能なケーキ屋さんです。</div>
 <div>お子様からお年寄りの方までお召し上がりいただけるよう、</div>
 <div>様々なバリエーションをご用意しております。</div>
 <div>また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</div>
 <div>ぜひご注文ください。</div>
+</div>
+
+<div style="text-align: center"><%= image_tag 'aboutnaganocake.jpg'%></div>
