--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row py-2">
-    <div class="col-10 offset-2">
-     <h4>注文情報確認</h4>
+    <div class="col-10">
+     <h2>注文情報確認</h2>
      </div>
      </div>
 
