--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,48 +1,50 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-3">
+      <div class="col-11">
       <!--ジャンル検索-->
       <%= render 'public/items/genrevar', genres: @genres %>
     </div>
+    </div>
 
 <!-- main-visual用のdiv -->
+<div class="col-md-9">
 <div class = "main-visual">
  <div class = "main-visual-content">
 <div class="jumbotron"  style= "background-size:cover;">
-</div>
 
-<div class="col-md-10">
-  <div class= "main-visual-text">
-  <div>ようこそながのCAKEへ！</div>
-  <div>このサイトは、ケーキ販売のECサイトになります。</div>
-  </div>
-  <p class="main-visual-name">
+
+  <p class="lead">ようこそながのCAKEへ！</p>
+  <p>このサイトは、ケーキ販売のECサイトになります。</p>
   <div>会員ではない方も商品の閲覧はできますが、</div>
   <div>購入には会員登録が必要になります。</div>
-  </p>
+  </div>
   </div>
  </div>
 </div>
+</div>
 
-  <div class="col-10">
-   <h3 style="margin: 20px 0;">新着商品</h3>
-    <div class="container">
-    <div class="row">
-      <div class="text-center row">
-    <tr><% @items.each do |item| %></tr>
-    <%= link_to item_path(item) do %>
-    <%= image_tag item.image, size:"200x200" %>
-    <div><%= item.name %></div>
+<div class="container">
+<div class="row">
+<div class="col-md-8 offset-md-3">
+<h3 style="margin: 20px 0;">新着商品</h3>
+<div class="row">
+ <% @items.each do |item| %>
+ <div class="col-md-3">
+     <%= link_to item_path(item) do %>
+     <%= image_tag item.image, size:"150x150" %>
+     <div><%= item.name %></div>
+     <% end %>
+    <div>¥<%= item.price.to_s(:delimited) %></div>
+    </div>
     <% end %>
+</div>
+</div>
+</div>
+</div>
 
-    <tr>¥<%= item.price.to_s(:delimited) %></tr>
-    <% end %>
-    </div>
-    </div>
-    </div>
-
-
-<div class="col-10">
-<div class="text-center right">
+<div class="text-right">
 <%= link_to "全ての商品を見る> ", items_path %>
+</div>
+</div>
