--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,6 +61,9 @@
         </li>
       </ul>
     <% end %>
+    <div>
+      <%= render "layouts/search", { search: @search } %>
+    </div>
     </div>
   </nav>
 </header>
