--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,43 +1,46 @@
 <div class="container">
+  <div class ="row">
+    <div class = "col-10">
 
 <h1>　　　マイページ</h1>
 
-<p>登録情報　<%= link_to "編集する",information_edit_path, class:"btn btn-primary" %></p>
+<p class="font-weight-bold h4">登録情報　<%= link_to "編集する",information_edit_path, class:"btn btn-success" %></p>
 
-<table class="table">
+<table class="table table-bordered">
   <tbody>
     <tr></tr>
     <tr>
-      <td>氏名</td>
+      <td class="table-secondary">氏名</td>
       <td><%= @customer.last_name %>　<%= @customer.first_name %></td>
     </tr>
     <tr>
-      <td>カナ</td>
+      <td class="table-secondary">カナ</td>
       <td><%= @customer.last_name_kana %>　<%= @customer.first_name_kana %></td>
     </tr>
     <tr>
-      <td>郵便番号</td>
+      <td class="table-secondary">郵便番号</td>
       <td><%= @customer.postal_code %></td>
     </tr>
     <tr>
-      <td>住所</td>
+      <td class="table-secondary">住所</td>
       <td><%= @customer.address %></td>
     </tr>
     <tr>
-      <td>電話番号</td>
+      <td class="table-secondary">電話番号</td>
       <td><%= @customer.telephone_number %></td>
     </tr>
     <tr>
-      <td>メールアドレス</td>
+      <td class="table-secondary">メールアドレス</td>
       <td><%= @customer.email %></td>
     </tr>
   </tbody>
 </table>
 
 
-<p>配送先　　<%= link_to "一覧を見る", addresses_path, class:"btn btn-sm btn-success" %></p>
+<p class="font-weight-bold h4">配送先　　<%= link_to "一覧を見る", addresses_path, class:"btn btn-sm btn-primary" %></p>
 
 
-<p>注文履歴　<%= link_to "一覧をみる", orders_path, class:"btn btn-sm btn-success" %></p>
-
+<p class="font-weight-bold h4">注文履歴　<%= link_to "一覧をみる", orders_path, class:"btn btn-sm btn-primary" %></p>
+    </div>
+  </div>
 </div>
