--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -64,7 +64,9 @@
       </ul>
     <% end %>
     <div>
+      <% unless admin_signed_in? %>
       <%= render "layouts/search", { search: @search } %>
+      <% end %>
     </div>
     </div>
   </nav>
