ヘッダ・フッタの色、マイページの編集画面のレイアウトを整えました

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-light mb-2" style="background-color:#FFFFCC;">
+  <nav class="navbar navbar-light mb-2" style="background-color:#fff7ef;">
     <div class="container">
       <p class="text-left"><%= link_to root_path, data: {"turbolinks" => false} do %>
             <%= image_tag 'nagano_cake.png',size: '110x110' %>
