--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="container-fluid" style="padding-bottom: 100px;">
 <footer>
   <div class="fixed-bottom">
-    <div class="text-center p-3" style="background-color:#FFFFCC;">
-      nagano-cake
+    <div class="text-center p-3" style="background-color:#fff7ef;">
+      Nagano-Cake © 2022 Team-Camp▲ Co., Ltd.
     </div>
   </div>
 </footer>
