--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,52 +1,44 @@
 <div class="container">
-  <h2>会員情報編集</h2>
-<%= form_with model: @customer, url: customers_information_path, method: :PATCH do |f| %>
-<table>
-  <tr>
-    <td>
-        <%= f.label :"氏名" %>
-        <%= f.text_field :last_name %>
-        <%= f.text_field :first_name %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-        <%= f.label :"フリガナ" %>
-        <%= f.text_field :last_name_kana %>
-        <%= f.text_field :first_name_kana %>
-    </t>
-  </tr>
-  <tr>
-    <td>
-        <%= f.label :"郵便番号" %>
-        <%= f.text_field :postal_code %>
-    </td>
-
-  </tr>
-  <tr>
-    <td>
-        <%= f.label :"住所" %>
-        <%= f.text_field :address %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-        <%= f.label :"電話番号" %>
-        <%= f.text_field :telephone_number %>
-    </td>
-  </tr>
-  <tr>
-    <td>
-        <%= f.label :"メールアドレス" %>
-        <%= f.text_field :email %>
-    </td>
-  </tr>
-</table>
-
-<p>
-  <%= f.submit :"編集内容を保存",class:"btn btn-sm btn-success"%>
-  <%= link_to "退会する", unsubscribe_path(@customer), class:"btn btn-danger" %>
-</p>
-<% end %>
-
+  <div class="row">
+    <div class="col-10">
+      <h2>　　会員情報編集</h2>
+      <%= form_with model: @customer, url: customers_information_path, method: :PATCH do |f| %>
+        <table class="table table-borderless">
+          <tbody>
+            <tr>
+              <td><%= f.label :"氏名" %></td>
+              <td><%= f.text_field :last_name %></td>
+              <td><%= f.text_field :first_name %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"フリガナ" %></td>
+              <td><%= f.text_field :last_name_kana %></td>
+              <td><%= f.text_field :first_name_kana %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"郵便番号" %></td>
+              <td><%= f.text_field :postal_code %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"住所" %></td>
+              <td><%= f.text_field :address %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"電話番号" %></td>
+              <td><%= f.text_field :telephone_number %></td>
+            </tr>
+            <tr>
+              <td><%= f.label :"メールアドレス" %></td>
+              <td><%= f.text_field :email %></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td><%= f.submit :"編集内容を保存",class:"btn btn-success"%></td>
+              <td><%= link_to "退会する", unsubscribe_path(@customer), class:"btn btn-danger" %></td>
+            </tr>
+          </tbody>
+        </table>
+      <% end %>
+    </div>
+  </div>
 </div>
