--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -37,10 +37,10 @@
 </table>
 
 
-<p class="font-weight-bold h4">配送先　　<%= link_to "一覧を見る", addresses_path, class:"btn btn-sm btn-primary" %></p>
+<p class="font-weight-bold h4">配送先　　<%= link_to "一覧を見る", addresses_path, class:"btn btn-primary" %></p>
 
 
-<p class="font-weight-bold h4">注文履歴　<%= link_to "一覧をみる", orders_path, class:"btn btn-sm btn-primary" %></p>
+<p class="font-weight-bold h4">注文履歴　<%= link_to "一覧をみる", orders_path, class:"btn btn-primary" %></p>
     </div>
   </div>
 </div>
