--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -28,14 +28,16 @@
   <h3 style="margin: 20px 0;">新着商品</h3>
   <div class="row">
   <% @items.each do |item| %>
-   <div class="col-md-3">
+   <div class="col-md-3 ">
+    <div class="w-95 h-95 shadow">
      <%= link_to item_path(item) do %>
-     <%= image_tag item.image, size:"150x150" %>
-     <div><%= item.name %></div>
+      <%= image_tag item.image,class:"img-fluid d-block mx-auto" %>
+      <div><%= item.name %></div>
      <% end %>
     <div>¥<%= item.price.to_s(:delimited) %></div>
     </div>
-    <% end %>
+   </div>
+  <% end %>
 </div>
 </div>
 </div>
