--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -12,7 +12,7 @@
       <div class="text-center row">
         <% @items.each do |item| %>
           <% if item.is_active == true %>
-            <div class="col-md-3">
+            <div class="col-md-3 shadow p-3 mb-4 m-4">
               <%= link_to item_path(item) do %>
                 <%= image_tag item.image, size:"200x200"  %>
                 <%= item.name %>
